[package]
name = "almostagame"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.3.8", default-features = false }
cpal = "0.13.4"
crossbeam-channel = "0.5.1"